Clone random info section

--- a/index.html
+++ b/index.html
@@ -26,10 +26,28 @@
                     this is a placeholder for an image
                 </div>
             </div>
-
         </div>
-        <div class=""></div>
-        <div class="info"></div>
+        <div class="random">
+            <p>Some random information.</p>
+            <div class="images">
+                <div class="image">
+                    <div></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="image">
+                    <div></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="image">
+                    <div></div>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="image">
+                    <div></div>
+                    this is some subtext under an illustration or image
+                </div>
+            </div>
+        </div>
         <div class="quote"></div>
         <div class="action"></div>
         <div class="footer"></div>
