--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                 </div>
             </div>
         </div>
-        <div class="quote"></div>
+        <div class="quote">
+            <p class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="person">-Joe Biden, Boomer</p>
+        </div>
         <div class="action"></div>
         <div class="footer"></div>
     </body>
