--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             </div>
             <button>Sign up</button>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <p>Copyright</p> 
+            <p class="copy">&copy</p> 
+            <p>The Odin Project 2021</p>
+        </div>
     </body>
 </html>
